Fix for bug 52190. Avoid crash by using NS_IF_ADDREF. sr=alecf